# agentciv-creator

./: .gitignore  README.md  agentciv_expansion_projects.md  agentciv_paper7_recursive_emergence.md  agentciv_paper8_scale_invariant_duality.md  creator_mode_ai_as_civilisation_designer.md  creator_mode_architecture_paper.md  pyproject.toml
creator/: __init__.py  config.py
docs/: BUILD_PLAN_CREATOR_SIM_INTEGRATION.md  CREATOR_MODE_RESEARCH_EXPERIMENT.md  CREATOR_MODE_V1.md  CREATOR_MODE_V1_BUILD.md  DUAL_MODE_BUILD_PLAN_V2.md  STAGE_2_COMPLETE_PLAN.md
provenance/: commit_008eb5a.ots  commit_0161352.ots  commit_056488d.ots  commit_06fc1df.ots  commit_06fc1df.ots.bak  commit_0bbf788.ots  commit_0bbf788.ots.bak  commit_1feef6b.ots  commit_1feef6b.ots.bak  commit_2b7457a.ots  commit_2b7457a.ots.bak  commit_3503b00.ots  commit_3503b00.ots.bak  commit_4f7a5a6.ots  commit_4f7a5a6.ots.bak  commit_51054d7.ots  commit_5945dea.ots  commit_5945dea.ots.bak  commit_6d7a003.ots  commit_6d7a003.ots.bak  commit_6ed7031.ots  commit_7392a1b.ots  commit_7392a1b.ots.bak  commit_8a846ff.ots  commit_903c2a4.ots  commit_926d3cb.ots  commit_926d3cb.ots.bak  commit_972ebfa.ots  commit_972ebfa.ots.bak  commit_97cc001.ots  commit_9a32c77.ots  commit_9a32c77.ots.bak  commit_a1c4f0b.ots  commit_a1c4f0b.ots.bak  commit_a4317b9.ots  commit_b763338.ots  commit_b763338.ots.bak  commit_d59fa37.ots  commit_d8f2bbf.ots  commit_de38f2b.ots  (+7 more)
tests/: test_analysis.py  test_campaign.py  test_designer.py  test_dogfood.py  test_knowledge_store.py  test_meta_reasoner.py  test_recursive.py  test_reporting.py  (+1 more)
(+25 files in other folders)
